--- a/css/style.css
+++ b/css/style.css
@@ -47,8 +47,18 @@ ul {
 .color-studio-header {
   color: rgba(0, 0, 0, 1);
 }
+.navigation-list{
+  display: flex;
+  gap: 30px;
+  align-items: center;
+}
 
-.link-style,
+.nav-list-item a:hover,
+.nav-list-item a:focus{
+  color: #2196f3;
+}
+
+.nav-list-item,
 .right-link {
   font-weight: 500;
   font-size: 14px;
@@ -69,23 +79,30 @@ ul {
   fill: var(--text-color-bleu);
 }
 
-.link-style:hover,
-.link-style:focus {
-  color: var(--text-color-bleu);
-  padding-bottom: 28px;
-  border-bottom: 4px solid #2196f3;
+
+.nav-list-item{
+  position:relative;
+}
+.nav-list-item a::after {
+  content: '';
+  border: 4px solid #2196f3;
+  color: #2196f3;
+  width: 100%;
+  position: absolute;
+  bottom: -32px;
   border-radius: 2px;
+  visibility: hidden;
+  left: 0;
 }
 
-.link-style::after{
-  content: '';
-  padding-bottom:28px ;
-  border-bottom:4px solid #2196f3;
-  border-radius: 2px; ;
+.nav-list-item a:focus::after {
+  visibility: visible;
 }
+
 
 .header-container {
   display: flex;
+  position: relative;
   box-sizing: border-box;
   width: 1200px;
   height: 80px;
@@ -148,6 +165,7 @@ header {
   margin-right: 93px;
 }
 .navigation-list {
+  position: relative;
   gap: 50px;
   flex-grow: 1;
 }
@@ -383,22 +401,16 @@ header {
 .image-description {
   display: flex;
   position: absolute;
-  top:294px;
+  top:224px;
   width: 100%;
   height: 70px;
   background: rgba(47, 48, 58, 0.8);
   justify-content: center;
   align-items: center;
-  transform: translateY(102%);
-    transition: transform 250ms linear;
+  
 }
-.image-skills li{
-  position:relative;
-  overflow: hidden;
-}
-.image-skills li:hover .image-description{
-  transform: translateY(-70px);
-}
+
+
 /*our team*/
 .team-section {
   display: flex;
