--- a/css/style.css
+++ b/css/style.css
@@ -47,15 +47,15 @@ ul {
 .color-studio-header {
   color: rgba(0, 0, 0, 1);
 }
-.navigation-list{
-  display: flex;
-  gap: 30px;
-  align-items: center;
-}
+
 
 .nav-list-item a:hover,
 .nav-list-item a:focus{
   color: #2196f3;
+  padding-bottom: 24px;
+ 
+  border-bottom: 4px solid #2196f3;
+  border-radius: 2px;
 }
 
 .nav-list-item,
@@ -80,25 +80,12 @@ ul {
 }
 
 
-.nav-list-item{
-  position:relative;
-}
-.nav-list-item a::after {
-  content: '';
-  border: 4px solid #2196f3;
-  color: #2196f3;
-  width: 100%;
-  position: absolute;
-  bottom: -32px;
+
+.curent-page{
+  padding-bottom: 24px;
+  border-bottom: 4px solid #2196f3;
   border-radius: 2px;
-  visibility: hidden;
-  left: 0;
 }
-
-.nav-list-item a:focus::after {
-  visibility: visible;
-}
-
 
 .header-container {
   display: flex;
@@ -124,7 +111,8 @@ header {
   z-index: 99;
   align-items: center;
   justify-content: center;
-  transition: opacity 250ms linear;
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .inner-div {
@@ -150,10 +138,18 @@ header {
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
+  opacity: 1;
+  transition: opacity 2s cubic-bezier(0.4, 0, 0.2, 1) ;
 }
+
+.modal-button button:focus{
+  opacity: 0;
+}
+
 .modal-button button {
   background: white;
   border: none;
+  
 }
 .nav-list,
 .navigation-list,
@@ -267,7 +263,6 @@ header {
   display: flex;
   box-sizing: border-box;
   flex-direction: column;
-  width: 1600px;
   height: 600px;
   margin: auto;
   justify-content: center;
